@@ -32,6 +32,7 @@ import com.intellij.plugins.haxe.model.evaluator.HaxeExpressionEvaluatorContext;
 import com.intellij.plugins.haxe.model.type.ResultHolder;
 import com.intellij.plugins.haxe.util.HaxeResolveUtil;
 import com.intellij.psi.*;
+import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.util.PsiTreeUtil;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
@@ -101,7 +102,9 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
 
     HaxeNamedComponent namedComponent = getNamedComponent(element);
     if (namedComponent == null) {
-
+      if(element instanceof  HaxeModule module) {
+        createModuleDocs(mainBuilder, module);
+      }
       if (element instanceof HaxeLiteralExpression) {
         return null; // no need to  show docs for literal expressions
       }else {
@@ -136,18 +139,29 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
     return mainBuilder.toString();
   }
 
+  private void createModuleDocs(HtmlBuilder mainBuilder, HaxeModule module) {
+    if( module.getModel() instanceof  HaxeModuleModel model) {
+      String qname = model.getPackageName();
+      StringBuilder stringBuilder = new StringBuilder();
+      DocumentationManagerUtil.createHyperlink(stringBuilder, qname, qname, false, true);
+      mainBuilder.append(HtmlChunk.icon("AllIcons.Nodes.Package", AllIcons.Nodes.Package)).nbsp(1);
+      mainBuilder.appendRaw(stringBuilder.toString()).br();
+
+      mainBuilder.appendRaw("Module " + model.getName()).br();
+              //TODO list members with links
+    }
+  }
+
   @Override
   public @Nls @Nullable String generateRenderedDoc(@NotNull PsiDocCommentBase comment) {
     if(comment instanceof  haxePsiDocCommentImpl haxeDocComment) {
       HaxeDocumentationRenderer renderer = haxeDocComment.getProject().getService(HaxeDocumentationRenderer.class);
 
-      String docs = haxeDocComment.getDocsWithoutIndents();
-      HtmlBuilder tmpBuilder = new HtmlBuilder();
-      String rendered = renderer.parseAndRenderDocs(docs);
-      HtmlChunk.Element content = tmpBuilder.appendRaw(rendered).wrapWith(HtmlChunk.Element.div().attr("class", "content"));
-      tmpBuilder.append(content);
-
-      return new HtmlBuilder().append(content).toString();
+      String rawDocContent = haxeDocComment.getDocsWithoutIndents();
+      HtmlBuilder htmlBuilder = new HtmlBuilder();
+      String rendered = renderer.parseAndRenderDocs(rawDocContent, comment);
+      htmlBuilder.appendRaw(rendered);
+      return htmlBuilder.toString();
     }
     return null;
   }
@@ -268,11 +282,10 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
   private static void appendDocumentation(HaxeNamedComponent namedComponent, HaxeDocumentationRenderer service, HtmlBuilder htmlBuilder) {
     final PsiComment comment = HaxeResolveUtil.findDocumentation(namedComponent);
     if(comment instanceof  haxePsiDocCommentImpl haxeDocComment) {
-      HtmlBuilder tmpBuilder = new HtmlBuilder();
-      String docs = haxeDocComment.getDocsWithoutIndents();
-      String rendered = service.parseAndRenderDocs(docs);
-      HtmlChunk.Element content = tmpBuilder.appendRaw(rendered).wrapWith(HtmlChunk.Element.div().attr("class", "content"));
-      htmlBuilder.append(content);
+      String rawDocContent = haxeDocComment.getDocsWithoutIndents();
+      HaxeDocumentationRenderer renderer = haxeDocComment.getProject().getService(HaxeDocumentationRenderer.class);
+      String rendered = renderer.parseAndRenderDocs(rawDocContent, haxeDocComment);
+      htmlBuilder.appendRaw(rendered);
     }
   }
 
@@ -286,9 +299,6 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
       HaxeMethodModel methodModel = methodDeclaration.getModel();
       if (methodModel != null) {
         appendMethodInfo(builder, renderer, methodModel);
-      }
-      else {
-        HaxeComponentName componentName = methodDeclaration.getComponentName();
       }
     }
   }
@@ -463,12 +473,19 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
 
   @Override
   public PsiElement getDocumentationElementForLink(PsiManager psiManager, String link, PsiElement context) {
-
+    GlobalSearchScope resolveScope = context.getResolveScope();
 
     final FullyQualifiedInfo qualifiedInfo = new FullyQualifiedInfo(link);
-    List<HaxeModel> result = HaxeProjectModel.fromElement(context).resolve(qualifiedInfo, context.getResolveScope());
+    if(context instanceof PsiDocCommentBase commentBase) {
+      PsiElement owner = commentBase.getOwner();
+      if(owner != null) {
+        resolveScope =  owner.getResolveScope();
+      }
+    }
+
+    List<HaxeModel> result = HaxeProjectModel.fromElement(context).resolve(qualifiedInfo, resolveScope);
     if (result != null && !result.isEmpty()) {
-      HaxeModel item = result.get(0);
+      HaxeModel item = result.getFirst();
       if (item instanceof HaxeFileModel) {
         HaxeClassModel mainClass = ((HaxeFileModel)item).getMainClassModel();
         if (mainClass != null) {
