@@ -34,12 +34,15 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.intellij.plugins.haxe.lang.lexer.HaxeTokenTypeSets.ONLY_COMMENTS;
 import static com.intellij.plugins.haxe.lang.lexer.HaxeTokenTypes.KUNTYPED;
 import static com.intellij.plugins.haxe.lang.psi.impl.HaxeReferenceImpl.getLiteralClassName;
 import static com.intellij.plugins.haxe.lang.psi.impl.HaxeReferenceImpl.tryToFindTypeFromCallExpression;
+import static com.intellij.plugins.haxe.lang.psi.impl.HaxeReferenceUtil.isStaticExtension;
+import static com.intellij.plugins.haxe.lang.psi.impl.HaxeReferenceUtil.wrapTypeInClassOrEnum;
 import static com.intellij.plugins.haxe.model.evaluator.HaxeExpressionUsageUtil.searchReferencesForTypeParameters;
 import static com.intellij.plugins.haxe.model.evaluator.HaxeExpressionUsageUtil.tryToFindTypeFromUsage;
 import static com.intellij.plugins.haxe.model.evaluator.callexpression.HaxeCallExpressionUtil.isBindCall;
@@ -48,6 +51,7 @@ import static com.intellij.plugins.haxe.model.type.HaxeMacroUtil.resolveMacroTyp
 import static com.intellij.plugins.haxe.model.type.ResultHolder.nullOrUnknown;
 import static com.intellij.plugins.haxe.model.type.SpecificTypeReference.*;
 import static com.intellij.plugins.haxe.model.evaluator.HaxeExpressionEvaluator.*;
+import static com.intellij.plugins.haxe.util.UsefulPsiTreeUtil.getExpectedTypeForReturn;
 
 @CustomLog
 public class HaxeExpressionEvaluatorHandlers {
@@ -93,16 +97,22 @@ public class HaxeExpressionEvaluatorHandlers {
       PsiElement[] children = expression.getChildren();
       String operatorText;
       if (children.length == 3) {
-        operatorText = children[1].getText();
-        SpecificTypeReference left = handle(children[0], context, resolver).getType();
-        SpecificTypeReference right = handle(children[2], context, resolver).getType();
-        left = resolveAnyTypeDefsOrTypeParameterConstraint(left);
-        right = resolveAnyTypeDefsOrTypeParameterConstraint(right);
-        // we might have constraints that help up here
-        if(left!= null && left.isTypeParameter())  left = tryResolveTypeParameter(left, resolver);
-        if(right!= null && right.isTypeParameter())  right = tryResolveTypeParameter(right, resolver);
+        if(children[1] instanceof  HaxeOperator operator) {
+          SpecificTypeReference left = handle(children[0], context, resolver).getType();
+          SpecificTypeReference right = handle(children[2], context, resolver).getType();
 
-        return HaxeOperatorResolver.getBinaryOperatorResult(expression, left, right, operatorText, context).createHolder();
+          left = resolveAnyTypeDefsOrTypeParameterConstraint(left);
+          right = resolveAnyTypeDefsOrTypeParameterConstraint(right);
+
+          if(left != null && left.isNullType()) left = SpecificHaxeClassReference.tryUnwrapNullType(left);
+          if(right != null && right.isNullType()) right =SpecificHaxeClassReference.tryUnwrapNullType(right);
+
+          // we might have constraints that help up here
+          if (left != null && left.isTypeParameter()) left = tryResolveTypeParameter(left, resolver);
+          if (right != null && right.isTypeParameter()) right = tryResolveTypeParameter(right, resolver);
+
+          return HaxeOperatorResolver.getBinaryOperatorResult(expression, left, right, operator, context).createHolder();
+        }
       }
       else {
         operatorText = getOperator(expression, HaxeTokenTypeSets.OPERATORS);
@@ -113,8 +123,9 @@ public class HaxeExpressionEvaluatorHandlers {
         // we might have constraints that help up here
         if(left.isTypeParameter())  left = tryResolveTypeParameter(left, resolver);
         if(right.isTypeParameter())  right = tryResolveTypeParameter(right, resolver);
-
-        return HaxeOperatorResolver.getBinaryOperatorResult(expression, left, right, operatorText, context).createHolder();
+      //TODO
+        throw  new RuntimeException("MLO: inspect");
+        //return HaxeOperatorResolver.getBinaryOperatorResult(expression, left, right, operatorText, context).createHolder();
       }
     }
     return createUnknown(expression);
@@ -301,7 +312,7 @@ public class HaxeExpressionEvaluatorHandlers {
                   SpecificHaxeClassReference classType = typeHolder.getClassType();
                   if(classType != null) {
                     HaxeClass haxeClass = classType.getHaxeClass();
-                    if(haxeClass != null) typeHolder = wrapTypeInClassOrEnum(element, haxeClass, haxeClass.getModel());
+                    if(haxeClass != null) typeHolder = wrapTypeInClassOrEnum(element, haxeClass);
                   }
                 }
               }
@@ -331,7 +342,7 @@ public class HaxeExpressionEvaluatorHandlers {
                 if (expression.isPureClassReferenceOf(haxeClass)) {
                   // make sure its not an import statement
                   if (PsiTreeUtil.getParentOfType(expression, HaxeImportStatement.class) == null) {
-                    typeHolder = wrapTypeInClassOrEnum(element, haxeClass, model);
+                    typeHolder = wrapTypeInClassOrEnum(element,  haxeClass);
                   }
                 }
               }
@@ -353,9 +364,13 @@ public class HaxeExpressionEvaluatorHandlers {
 
             HaxeVarInit init = fieldDeclaration.getVarInit();
             if (init != null) {
+              boolean immutable = false;
+              if (fieldDeclaration.getModel() instanceof HaxeFieldModel model) {
+                immutable = model.isFinal();
+              }
               HaxeExpression initExpression = init.getExpression();
               HaxeGenericResolver initResolver = HaxeGenericResolverUtil.generateResolverFromScopeParents(initExpression);
-              typeHolder = HaxeTypeResolver.getFieldOrMethodReturnType((AbstractHaxeNamedComponent)subelement, initResolver);
+              typeHolder = HaxeTypeResolver.getFieldOrMethodReturnType(fieldDeclaration, initResolver).setImmutable(immutable);
             }
             else {
               HaxeTypeTag tag = fieldDeclaration.getTypeTag();
@@ -373,7 +388,6 @@ public class HaxeExpressionEvaluatorHandlers {
                     typeHolder = resolve;
                   }
                 }
-
               }
             }
           }
@@ -394,6 +408,25 @@ public class HaxeExpressionEvaluatorHandlers {
 
             SpecificFunctionReference type = haxeMethod.getModel().getFunctionType(isFromCallExpression ? localResolver : localResolver.withoutAssignHint());
             if (!isFromCallExpression) {
+              if( reference instanceof HaxeReferenceExpression referenceExpression) {
+                // if this is a reference to an extension method we need to bind the callie type
+                if(isStaticExtension(referenceExpression)) {
+                  List<HaxeArgument> argumentsToKeep  = type.getArguments();
+                  HaxeGenericResolver bindResolver =  null;
+                  // if this is from a method we might have typeParameters and need to "bind" these if they are present in the callie
+                  if(type.method != null) {
+                    List<SpecificTypeReference> params = argumentsToKeep.stream().map(HaxeArgument::getType).map(ResultHolder::getType).collect(Collectors.toList());
+                    params.removeFirst();
+                    SpecificTypeReference callieType = tryToFindPreviousTypeInChainForExtensionMethods(element.getFirstChild());
+                    params.addFirst(callieType);
+                    HaxeCallExpressionContext tmpContext = HaxeCallExpressionUtil.createContextForMethodCall(params, type.method, null);
+                    HaxeCallExpressionEvaluation evaluate = tmpContext.evaluate();
+                    bindResolver = evaluate.getCallExpressionResolver();
+                  }
+                  argumentsToKeep.removeFirst(); // remove first argument as this should be the callie
+                  type = type.performMethodBind(argumentsToKeep, bindResolver);
+                }
+              }
               //  expression is referring to the method not calling it.
               //  assign hint should be used for substituting parameters instead of being used as return type
               type = resolver.substituteTypeParamsWithAssignHintTypes(type);
@@ -445,7 +478,7 @@ public class HaxeExpressionEvaluatorHandlers {
               if(model instanceof HaxeEnumExtractorModel extractorModel) {
                 resolver.addAll(extractorModel.getGenericResolver());
               }
-              typeHolder = handle(matchExpression.getExpression(),context, resolver);
+              typeHolder = handle(matchExpression.getExtractorExpression(),context, resolver);
             }else {
               HaxeSwitchStatement switchStatement = PsiTreeUtil.getParentOfType(caseExpr, HaxeSwitchStatement.class);
               if (switchStatement.getExpression() != null) {
@@ -484,16 +517,20 @@ public class HaxeExpressionEvaluatorHandlers {
     //return SpecificTypeReference.getDynamic(element).createHolder();
   }
 
-  private static ResultHolder wrapTypeInClassOrEnum(HaxeReferenceExpression element, HaxeClass haxeClass, HaxeClassModel model) {
-    ResultHolder typeHolder;
-    // wrap in Class<> or Enum<>
-    SpecificHaxeClassReference originalClass = SpecificHaxeClassReference.withoutGenerics(model.getReference());
-    SpecificHaxeClassReference wrappedClass =
-            SpecificHaxeClassReference.getStdClass(haxeClass.isEnum() ? ENUM : CLASS, element,
-                    new ResultHolder[]{new ResultHolder(originalClass)});
-    typeHolder = wrappedClass.createHolder();
-    return typeHolder;
+  private static SpecificTypeReference tryToFindPreviousTypeInChainForExtensionMethods(PsiElement firstChild) {
+    ResultHolder result = evaluateWithRecursionGuard(firstChild).result;
+    if(result == null) return createUnknown(firstChild).getType();
+    // check if extension method is on a pure references and if so wrap it in class/enum
+    if(result.getType() instanceof SpecificHaxeClassReference classReference) {
+      String className = classReference.getClassName();
+      if (className != null &&firstChild.textMatches(className)) {
+        HaxeClass haxeClass = classReference.getHaxeClass();
+        if(haxeClass != null) return wrapTypeInClassOrEnum(firstChild, haxeClass).getType();
+      }
+    }
+    return result.getType();
   }
+
 
   private static boolean isReificationExpression(HaxeReferenceExpression element) {
     return false;
@@ -585,18 +622,23 @@ public class HaxeExpressionEvaluatorHandlers {
     HaxeFieldDeclaration declaration) {
     HaxeTypeTag typeTag = declaration.getTypeTag();
 
-    if (typeTag!= null) {
-      return HaxeTypeResolver.getTypeFromTypeTag(typeTag, declaration);
-    }else {
-      HaxeVarInit init = declaration.getVarInit();
-      if (init != null) {
+    boolean immutable = false;
+    HaxeVarInit init = declaration.getVarInit();
+
+    if (declaration.getModel() instanceof HaxeFieldModel model) {
+      immutable = model.isFinal() && init != null;
+    }
+    if (typeTag != null) {
+      return HaxeTypeResolver.getTypeFromTypeTag(typeTag, declaration).setImmutable(immutable);
+    } else if (init != null) {
+      if (init.getExpression() != null) {
         ResultHolder result = handle(init.getExpression(), context, resolver);
         if (isDynamicBecauseOfNullValueInit(result)) {
           HaxeComponentName element = declaration.getComponentName();
           final ResultHolder hint = result;
           result = tryToFindTypeFromUsage(element, result, hint, context, resolver, null);
         }
-        return result;
+        if (result != null) return result.setImmutable(immutable);
       }
     }
     return createUnknown(declaration);
@@ -806,10 +848,23 @@ public class HaxeExpressionEvaluatorHandlers {
 
 
   static ResultHolder handleEnumExtractedValue(@NotNull HaxeEnumExtractedValueReference extractedValue, @NotNull HaxeGenericResolver resolver) {
-    HaxeEnumArgumentExtractor extractor = PsiTreeUtil.getParentOfType(extractedValue, HaxeEnumArgumentExtractor.class);
+    HaxeExtractorMatchExpression matchExpression = PsiTreeUtil.getParentOfType(extractedValue, HaxeExtractorMatchExpression.class, true, HaxeEnumArgumentExtractor.class);
+    if (matchExpression != null) {
+      HaxeSwitchCaseExpr match = matchExpression.getMatch();
+      if (PsiTreeUtil.isAncestor(match, extractedValue, false)) {
+        return evaluate(matchExpression.getExtractorExpression(), resolver).result;
+      }
+    }
+
+    HaxeEnumArgumentExtractor extractor = PsiTreeUtil.getParentOfType(extractedValue, HaxeEnumArgumentExtractor.class, true, HaxeEnumArgumentExtractor.class);
     if (extractor != null) {
       HaxeEnumExtractorModel extractorModel = (HaxeEnumExtractorModel)extractor.getModel();
       return extractorModel.resolveExtractedValueType(extractedValue);
+    }
+
+    PsiElement resolve = extractedValue.resolve();
+    if(resolve != null) {
+      return evaluate(resolve).result;
     }
     return createUnknown(extractedValue);
   }
@@ -886,16 +941,51 @@ public class HaxeExpressionEvaluatorHandlers {
     HaxeExpressionEvaluatorContext context,
     HaxeGenericResolver resolver,
     HaxePrefixExpression prefixExpression) {
+
     HaxeExpression expression = prefixExpression.getExpression();
     ResultHolder typeHolder = handle(expression, context, resolver);
     SpecificTypeReference type = typeHolder.getType();
-    if (type.getConstant() != null) {
-      String operatorText = getOperator(prefixExpression, HaxeTokenTypeSets.OPERATORS);
-      if (operatorText != "") {
-        return type.withConstantValue(HaxeTypeUtils.applyUnaryOperator(type.getConstant(), operatorText)).createHolder();
-      }
+    if(type instanceof SpecificHaxeClassReference classReference && classReference.isAbstractType()) {
+      return handlePrefix(classReference, prefixExpression, resolver);
     }
-    return typeHolder;
+    return createUnknown(prefixExpression);
+  }
+  static ResultHolder handlePostfixExpression(
+    HaxeExpressionEvaluatorContext context,
+    HaxeGenericResolver resolver,
+    HaxePostfixExpression postfixExpression) {
+
+    HaxeExpression expression = postfixExpression.getExpression();
+    ResultHolder typeHolder = handle(expression, context, resolver);
+    SpecificTypeReference type = typeHolder.getType();
+    if(type instanceof SpecificHaxeClassReference classReference && classReference.isAbstractType()) {
+      return handlePostfix(classReference, postfixExpression, resolver);
+    }
+    return createUnknown(postfixExpression);
+
+  }
+
+  private static ResultHolder handlePostfix(SpecificHaxeClassReference classReference, HaxePostfixExpression postfixExpression, HaxeGenericResolver resolver) {
+    // core types (int float etc) and String(extern) does not contain definitions for operators (no need to try to find overload methods)
+    if(classReference.isCoreType() || classReference.isString()) return classReference.createHolder();
+
+    List<HaxeMethodModel> operatorOverloads = classReference.getOperatorOverloads(postfixExpression.getAssignableOperator());
+      if (!operatorOverloads.isEmpty()) {
+          return operatorOverloads.getFirst().getReturnType(resolver);
+      }
+      return createUnknown(postfixExpression);
+  }
+
+  private static ResultHolder handlePrefix(SpecificHaxeClassReference classReference, HaxeUnaryExpression unaryExpression, HaxeGenericResolver resolver) {
+    // core types (int float etc) and String(extern) does not contain definitions for operators (no need to try to find overload methods)
+    if (classReference.isCoreType() || classReference.isString()) return classReference.createHolder();
+    HaxeOperator operator = unaryExpression.getOperator();
+    List<HaxeMethodModel> operatorOverloads = classReference.getOperatorOverloads(operator);
+    if (!operatorOverloads.isEmpty()) {
+      return operatorOverloads.getFirst().getReturnType(resolver);
+    }
+
+    return createUnknown(unaryExpression);
   }
 
   static ResultHolder handleIfStatement(
@@ -1132,7 +1222,6 @@ public class HaxeExpressionEvaluatorHandlers {
             HaxeGenericResolver methodResolver = methodModel.getGenericResolver(localResolver);
             localResolver.addAll(methodResolver);// apply constraints from methodSignature (if any)
             ResultHolder returnType = methodModel.getReturnType(localResolver);
-            if (returnType.getType().isNullType()) localResolver.resolve(returnType);
             return returnType;
           }
           // TODO make better solution
@@ -1150,6 +1239,44 @@ public class HaxeExpressionEvaluatorHandlers {
       }
     }
     return createUnknown(arrayAccessExpression);
+  }
+
+  public static ResultHolder getArrayAccessTypeFromClass(SpecificHaxeClassReference classReference) {
+    SpecificTypeReference reference = classReference.fullyResolveTypeDefAndUnwrapNullTypeReference();
+    if (reference instanceof SpecificHaxeClassReference fullyResolved){
+      classReference = fullyResolved;
+    }
+    if(classReference.isArray()) {
+      // hack (Array does not have any "get" method for array access)
+      @NotNull ResultHolder[] specifics = classReference.getSpecifics();
+      if(specifics.length == 1) {
+        return specifics[0];
+      }
+    }
+    HaxeClass haxeClass = classReference.getHaxeClass();
+    if (haxeClass != null) {
+      HaxeNamedComponent getter = haxeClass.findArrayAccessGetter(classReference.getGenericResolver());
+      if (getter instanceof HaxeMethodDeclaration methodDeclaration) {
+        HaxeMethodModel methodModel = methodDeclaration.getModel();
+        HaxeGenericResolver localResolver = classReference.getGenericResolver();
+        HaxeGenericResolver methodResolver = methodModel.getGenericResolver(localResolver);
+        localResolver.addAll(methodResolver);// apply constraints from methodSignature (if any)
+        ResultHolder returnType = methodModel.getReturnType(localResolver);
+        return returnType;
+      }
+      // TODO make better solution
+      // hack to work around external ArrayAccess interface, interface that has no methods but tells compiler that implementing class has array access
+      else if (getter instanceof HaxeExternInterfaceDeclaration interfaceDeclaration) {
+        HaxeGenericResolver classResolver = classReference.getGenericResolver();
+        HaxeGenericResolver interfaceResolver = classResolver.translateFromTo(classReference.getHaxeClass(), interfaceDeclaration);
+        ResultHolder interfaceType = interfaceResolver.resolve(interfaceDeclaration.getModel().getInstanceType());
+        if(interfaceType != null) {
+          @NotNull ResultHolder[] specifics = interfaceType.getClassType().getSpecifics();
+          if (specifics.length == 1) return specifics[0];
+        }
+      }
+    }
+    return null;
   }
 
   static ResultHolder handleIteratorExpression(
@@ -1301,6 +1428,8 @@ public class HaxeExpressionEvaluatorHandlers {
         if (type instanceof  SpecificEnumValueReference enumValueReference) {
           type = enumValueReference.getEnumClass();
         }
+        // if value is null we skip it and hope the rest contains the type or that the type can be resolved from usage later
+        if(type.isDynamic() && type.getConstant() instanceof HaxeNull) continue;;
         references.add(type);
       }
     }
@@ -1308,6 +1437,10 @@ public class HaxeExpressionEvaluatorHandlers {
     SpecificTypeReference suggestedType = null;
     ResultHolder  typeTagType = findExpectedTypeForUnify(arrayLiteral);
     if (typeTagType!= null) {
+      // make sure we do not pass Null<> as expected type
+      if(typeTagType.getType().isNullType()) {
+        typeTagType = typeTagType.tryUnwrapNullType();
+      }
       // we expect Array<T> or collection type with type parameter (might not work properly if type is implicit cast)
       if (typeTagType.getClassType() != null) {
         @NotNull ResultHolder[] specifics = typeTagType.getClassType().getSpecifics();
@@ -1467,9 +1600,18 @@ public class HaxeExpressionEvaluatorHandlers {
         SpecificTypeReference assignHintType = assignHint == null ? null : assignHint.getType();
         HaxeCallExpressionContext callExpressionContext = HaxeCallExpressionUtil.createContextForMethodCall(callExpression, assignHintType, methodModel.getMethod());
         HaxeCallExpressionEvaluation evaluate = callExpressionContext.evaluate();
-        functionType = evaluate.getFunctionType(methodModel);
+        if(evaluate.isValid()) {
+          functionType = evaluate.getFunctionType(methodModel);
+        }else {
+          functionType = createUnknown(callExpression).getType();
+        }
       }else {
         SpecificTypeReference callieRef = tryGetCallieType(callExpression);
+        if(callieRef instanceof SpecificHaxeClassReference  callieClassReference) {
+          if(callieClassReference.isNullType() || callieClassReference.isTypeDef()) {
+            callieRef = callieClassReference.fullyResolveTypeDefAndUnwrapNullTypeReference();
+          }
+        }
         if (callieRef instanceof SpecificHaxeClassReference classReference &&  !classReference.isUnknown()) {
           HaxeGenericResolver callieResolver = classReference.getGenericResolver();
           HaxeClass callieType = classReference.getHaxeClass();
@@ -1485,6 +1627,11 @@ public class HaxeExpressionEvaluatorHandlers {
           }
         }
         functionType = handle(callExpressionRef, context, localResolver).getType();
+        if(functionType instanceof SpecificHaxeClassReference  functionTypeRef) {
+          if(functionTypeRef.isNullType() || functionTypeRef.isTypeDef()) {
+            functionType = functionTypeRef.fullyResolveTypeDefAndUnwrapNullTypeReference();
+          }
+        }
       }
         boolean varIsMacroFunction = isCallExpressionToMacroMethod(callExpressionRef);
         boolean callIsFromMacroContext = isInMacroFunction(callExpressionRef);
@@ -1639,6 +1786,8 @@ public class HaxeExpressionEvaluatorHandlers {
   private static ResultHolder tryHandleFunctionBind(SpecificFunctionReference functionReference, HaxeCallExpression callExpression) {
     List<HaxeArgument> arguments = functionReference.getArguments();
     List<HaxeArgument> argumentsToKeep = new ArrayList<>();
+    List<SpecificTypeReference>  tmParamList = new ArrayList<>();
+    boolean canHaveTypeParameters = functionReference.method != null;
 
     HaxeCallExpressionList expressionList = callExpression.getExpressionList();
     if (expressionList == null) {
@@ -1648,9 +1797,10 @@ public class HaxeExpressionEvaluatorHandlers {
           argumentsToKeep.add(argument);
         }
       }
-      return functionReference.performMethodBind(argumentsToKeep).createHolder();
+      return functionReference.performMethodBind(argumentsToKeep, null).createHolder();
     } else {
       List<HaxeExpression> expressions = expressionList.getExpressionList();
+
       for (int i = 0; i < arguments.size(); i++) {
         HaxeExpression expr = expressions.size() > i ? expressions.get(i) : null;
         HaxeArgument argument = arguments.get(i);
@@ -1661,12 +1811,25 @@ public class HaxeExpressionEvaluatorHandlers {
         if (expr == null) {
           if (!optional) {
             argumentsToKeep.add(argument);
+            if (canHaveTypeParameters)   tmParamList.add(argument.getType().getType());
           }
         } else if (expr.textMatches("_")) {
           argumentsToKeep.add(argument);
+          if (canHaveTypeParameters)   tmParamList.add(argument.getType().getType());
+        }else {
+          if (canHaveTypeParameters) {
+            ResultHolder expressionType = evaluateWithRecursionGuard(expr).result;
+            tmParamList.add(expressionType.getType());
+          }
         }
       }
-      return functionReference.performMethodBind(argumentsToKeep).createHolder();
+      if (canHaveTypeParameters) {
+        HaxeCallExpressionContext context = HaxeCallExpressionUtil.createContextForMethodCall(tmParamList, functionReference.method, null);
+        HaxeCallExpressionEvaluation evaluate = context.evaluate();
+        HaxeGenericResolver callExpressionResolver = evaluate.getCallExpressionResolver();
+        return functionReference.performMethodBind(argumentsToKeep, callExpressionResolver).createHolder();
+      }
+      return functionReference.performMethodBind(argumentsToKeep, null).createHolder();
     }
   }
 
@@ -1735,6 +1898,10 @@ public class HaxeExpressionEvaluatorHandlers {
     final HaxeVarInit init = varDeclaration.getVarInit();
     final HaxeTypeTag typeTag = varDeclaration.getTypeTag();
 
+    var immutable = false;
+    if(varDeclaration.getModel() instanceof HaxeLocalVarModel model) {
+      immutable = model.isFinal() && init != null;
+    }
     ResultHolder result = null;
     HaxeGenericResolver localResolver = new HaxeGenericResolver();
     localResolver.addAll(resolver);
@@ -1775,6 +1942,8 @@ public class HaxeExpressionEvaluatorHandlers {
 
     result = tryGetEnumValuesDeclaringClass(result);
     context.setLocal(name.getText(), result);
+    // disable/enable mutation (disable if final with init expression)
+      if (result != null) result.setImmutable(immutable);
     return result;
   }
 
@@ -1876,7 +2045,10 @@ public class HaxeExpressionEvaluatorHandlers {
     return createUnknown(whileStatement);
   }
 
-  static ResultHolder handleCastExpression(HaxeCastExpression castExpression) {
+  static ResultHolder handleUnsafeCastExpression(HaxeUnsafeCastExpression castExpression) {
+      return createUnknown(castExpression);
+  }
+  static ResultHolder handleSafeCastExpression(HaxeSafeCastExpression castExpression) {
     HaxeTypeOrAnonymous anonymous = castExpression.getTypeOrAnonymous();
     if (anonymous != null) {
       return HaxeTypeResolver.getTypeFromTypeOrAnonymous(anonymous);
@@ -1884,6 +2056,14 @@ public class HaxeExpressionEvaluatorHandlers {
       return createUnknown(castExpression);
     }
   }
+//  static ResultHolder handleCastExpression(HaxeCastExpression castExpression) {
+//    HaxeTypeOrAnonymous anonymous = castExpression.getTypeOrAnonymous();
+//    if (anonymous != null) {
+//      return HaxeTypeResolver.getTypeFromTypeOrAnonymous(anonymous);
+//    } else {
+//      return createUnknown(castExpression);
+//    }
+//  }
 
   @NotNull
   static ResultHolder handleRestParameter(HaxeRestParameter restParameter) {
@@ -2092,6 +2272,9 @@ public class HaxeExpressionEvaluatorHandlers {
   public static @Nullable ResultHolder searchForIteratorType(SpecificHaxeClassReference haxeClassReference, String iteratorName, PsiElement parent) {
     // ignore "Dynamic" as it can assign to anything and will in most cases incorrectly be matched with iterators for other types
     if (haxeClassReference.isDynamic()) return null;
+    // do not attempt to find iterator if  type is unknown
+    if(haxeClassReference.isUnknown()) return haxeClassReference.createHolder();
+
     SpecificTypeReference typeReference = haxeClassReference.fullyResolveTypeDefAndUnwrapNullTypeReference();
     if (typeReference instanceof SpecificHaxeClassReference resolvedClassReference) {
       HaxeGenericResolver referenceGenericResolver = resolvedClassReference.getGenericResolver();
@@ -2160,7 +2343,7 @@ public class HaxeExpressionEvaluatorHandlers {
     if (isUntypedReturn(returnStatement)) return result;
     List<PsiElement> children = withoutMetadata(returnStatement.getChildren());
     if (!children.isEmpty()) {
-      PsiElement child = children.get(0);
+      PsiElement child = children.getFirst();
       result = handle(child, context, resolver);
     }
     context.addReturnType(result, returnStatement);
@@ -2312,6 +2495,13 @@ public class HaxeExpressionEvaluatorHandlers {
         }
       }
     }
+    if (parent instanceof HaxeReturnStatement returnStatement) {
+      ResultHolder type = getExpectedTypeForReturn(returnStatement);
+      if ( type != null && !type.isUnknown()) {
+        return type;
+      }
+    }
+
     if (parent instanceof HaxeCallExpressionList callExpressionList
         && callExpressionList.getParent() instanceof HaxeCallExpression callExpression) {
 
